# flask_structure

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/flask_structure/: app.db  config.py
src/flask_structure/app/: __init__.py
src/flask_structure/app/main/: __init__.py  routes.py
src/flask_structure/app/models/: post.py  question.py
src/flask_structure/app/posts/: __init__.py  routes.py
src/flask_structure/app/questions/: __init__.py  routes.py
src/flask_structure/app/templates/: base.html  index.html
src/flask_structure/app/templates/posts/: categories.html  index.html
src/flask_structure/app/templates/questions/: index.html
